--- a/package.json
+++ b/package.json
@@ -7,9 +7,17 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "firebase": "^11.5.0",
+    "lucide-react": "^0.484.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.4.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.3",
+    "tailwind-merge": "^3.0.2",
+    "tw-animate-css": "^1.2.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -35,5 +43,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "ajv": "^7.2.4",
+    "tailwindcss": "^3.4.17"
   }
 }
