--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "clsx": "^2.1.1",
     "firebase": "^11.5.0",
     "lucide-react": "^0.484.0",
+    "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.0",
